@@ -8,6 +8,9 @@ Revision history for Perl extension Module::Build.
    specific about the directories we scan for pod that needs to be
    converted, effectively avoiding blib/html. [Ray Zimmerman]
 
+ - If Pod::Man is not available, we now skip building man pages
+   (rather than dying) and tell the user why.
+
  - On some Unix platforms (BSD derivatives, mostly) perl's $^X
    variable isn't set to the full path of the perl executable, just
    'perl', when the 'Build' script is run as './Build' and not 'perl
